ompi/mpi/f03/mpi.f03

!
! Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
!                         University Research and Technology
!                         Corporation.  All rights reserved.
! Copyright (c) 2004-2005 The University of Tennessee and The University
!                         of Tennessee Research Foundation.  All rights
!                         reserved.
! Copyright (c) 2004-2006 High Performance Computing Center Stuttgart,
!                         University of Stuttgart.  All rights reserved.
! Copyright (c) 2004-2005 The Regents of the University of California.
!                         All rights reserved.
! $COPYRIGHT$
!
! Additional copyrights may follow
!
! $HEADER$
!
!
! C-interop interfaces for mpi.h
!

use, intrinsic :: ISO_C_BINDING


interface MPI_Abort

integer(C_INT) function &
MPI_Abort(comm, errorcode, ierr) &
  BIND(C, name="MPI_Abort")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: errorcode
end function MPI_Abort

end interface MPI_Abort


interface MPI_Accumulate

integer(C_INT) function &
MPI_Accumulate(origin_addr, origin_count, origin_datatype, target_rank, target_disp, target_count, target_datatype, &
        op, win, ierr) &
  BIND(C, name="MPI_Accumulate")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: origin_addr
  integer(INT_C), value, intent(in) :: origin_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: origin_datatype
  integer(INT_C), value, intent(in) :: target_rank
  integer(kind=MPI_ADDRESS_KIND), value, intent(in) :: target_disp
  integer(INT_C), value, intent(in) :: target_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: target_datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(MPI_HANDLE_KIND), value, intent(in) :: win
end function MPI_Accumulate

end interface MPI_Accumulate


interface MPI_Add_error_class

integer(C_INT) function &
MPI_Add_error_class(errorclass, ierr) &
  BIND(C, name="MPI_Add_error_class")
  use MPI_C_BINDING
  integer(INT_C), value, intent(out) :: errorclass
end function MPI_Add_error_class

end interface MPI_Add_error_class


interface MPI_Add_error_code

integer(C_INT) function &
MPI_Add_error_code(errorclass, errorcode, ierr) &
  BIND(C, name="MPI_Add_error_code")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: errorclass
  integer(INT_C), value, intent(out) :: errorcode
end function MPI_Add_error_code

end interface MPI_Add_error_code


interface MPI_Add_error_string

integer(C_INT) function &
MPI_Add_error_string(errorcode, string, ierr) &
  BIND(C, name="MPI_Add_error_string")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: errorcode
  character(len=*), value, intent(in) :: string
end function MPI_Add_error_string

end interface MPI_Add_error_string


interface MPI_Address

integer(C_INT) function &
MPI_Address(location, address, ierr) &
  BIND(C, name="MPI_Address")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: location
  integer(kind=MPI_ADDRESS_KIND), value, intent(out) :: address
end function MPI_Address

end interface MPI_Address


interface MPI_Allgather

integer(C_INT) function &
MPI_Allgather(sendbuf, sendcount, sendtype,
              recvbuf, recvcount, recvtype,
              comm, ierr) &
  BIND(C, name="MPI_Allgather")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Allgather

end interface MPI_Allgather


interface MPI_Allgatherv

integer(C_INT) function &
MPI_Allgatherv(sendbuf, sendcount, sendtype,
               recvbuf, recvcount, recvtype,
               comm, ierr) &
  BIND(C, name="MPI_Allgatherv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Allgatherv

end interface MPI_Allgatherv


interface MPI_Alloc_mem

integer(C_INT) function &
MPI_Alloc_mem(size, info, baseptr, ierr) &
  BIND(C, name="MPI_Alloc_mem")
  use MPI_C_BINDING
  integer(kind=MPI_ADDRESS_KIND), value, intent(in) :: size
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  type(C_PTR), value, intent(out) :: baseptr
end function MPI_Alloc_mem

end interface MPI_Alloc_mem


interface MPI_Allreduce

integer(C_INT) function &
MPI_Allreduce(sendbuf, recvbuf, count,
              datatype, op, comm, ierr) &
  BIND(C, name="MPI_Allreduce")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: op
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Allreduce

end interface MPI_Allreduce


interface MPI_Alltoall

integer(C_INT) function &
MPI_Alltoall(sendbuf, sendcount, sendtype,
             recvbuf, recvcount, recvtype,
             comm, ierr) &
  BIND(C, name="MPI_Alltoall")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(out) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Alltoall

end interface MPI_Alltoall


interface MPI_Alltoallv

integer(C_INT) function &
MPI_Alltoallv(sendbuf, sendcount, sdispls, sendtype,
              recvbuf, recvcount, rdispls, recvtype,
              comm, ierr) &
  BIND(C, name="MPI_Alltoallv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), dimension(*), value, intent(in) :: sendcount
  integer(INT_C), dimension(*), value, intent(in) :: sdispls
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(out) :: recvbuf
  integer(INT_C), dimension(*), value, intent(in) :: recvcount
  integer(INT_C), dimension(*), value, intent(in) :: rdispls
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Alltoallv

end interface MPI_Alltoallv


interface MPI_Alltoallw

integer(C_INT) function &
MPI_Alltoallw(sendbuf, sendcounts, sdispls, sendtypes,
              recvbuf, recvcounts, rdispls, recvtypes,
              comm, ierr) &
  BIND(C, name="MPI_Alltoallw")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), dimension(*), value, intent(in) :: sendcounts
  integer(INT_C), dimension(*), value, intent(in) :: sdispls
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(in) :: sendtypes
  type(C_PTR), value, intent(out) :: recvbuf
  integer(INT_C), dimension(*), value, intent(in) :: recvcounts
  integer(INT_C), dimension(*), value, intent(in) :: rdispls
  integer(MPI_HANDLE_KIND), dimension(*), value, intent(in) :: recvtypes
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Alltoallw

end interface MPI_Alltoallw


interface MPI_Attr_delete

integer(C_INT) function &
MPI_Attr_delete(comm, keyval, ierr) &
  BIND(C, name="MPI_Attr_delete")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: keyval
end function MPI_Attr_delete

end interface MPI_Attr_delete


interface MPI_Attr_get

integer(C_INT) function &
MPI_Attr_get(comm, keyval, attribute_val, flag, ierr) &
  BIND(C, name="MPI_Attr_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: keyval
  integer(C_INT), value, intent(out) :: attribute_val
  integer, value, intent(out) :: flag
end function MPI_Attr_get

end interface MPI_Attr_get


interface MPI_Attr_put

integer(C_INT) function &
MPI_Attr_put(comm, keyval, attribute_val, ierr) &
  BIND(C, name="MPI_Attr_put")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: keyval
  integer(C_INT), value, intent(in) :: attribute_val
end function MPI_Attr_put

end interface MPI_Attr_put


interface MPI_Barrier

integer(C_INT) function &
MPI_Barrier(comm, ierr) &
  BIND(C, name="MPI_Barrier")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Barrier

end interface MPI_Barrier


interface MPI_Bcast

integer(C_INT) function &
MPI_Bcast(buffer, count, datatype, root, comm, ierr) &
  BIND(C, name="MPI_Bcast")
  use MPI_C_BINDING
  type(C_PTR), value, intent(inout) :: buffer
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Bcast

end interface MPI_Bcast


interface MPI_Bsend

integer(C_INT) function &
MPI_Bsend(buf, count, datatype, dest, tag, comm, ierr) &
  BIND(C, name="MPI_Bsend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Bsend

end interface MPI_Bsend


interface MPI_Bsend_init

integer(C_INT) function &
MPI_Bsend_init(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Bsend_init")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Bsend_init

end interface MPI_Bsend_init


interface MPI_Buffer_attach

integer(C_INT) function &
MPI_Buffer_attach(buffer, size, ierr) &
  BIND(C, name="MPI_Buffer_attach")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buffer
  integer(INT_C), value, intent(in) :: size
end function MPI_Buffer_attach

end interface MPI_Buffer_attach


interface MPI_Buffer_detach

integer(C_INT) function &
MPI_Buffer_detach(buffer, size, ierr) &
  BIND(C, name="MPI_Buffer_detach")
  use MPI_C_BINDING
  type(C_PTR), value, intent(out) :: buffer
  integer(INT_C), value, intent(out) :: size
end function MPI_Buffer_detach

end interface MPI_Buffer_detach


interface MPI_Cancel

integer(C_INT) function &
MPI_Cancel(request, ierr) &
  BIND(C, name="MPI_Cancel")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: request
end function MPI_Cancel

end interface MPI_Cancel


interface MPI_Cart_coords

integer(C_INT) function &
MPI_Cart_coords(comm, rank, maxdims, coords, ierr) &
  BIND(C, name="MPI_Cart_coords")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: rank
  integer(INT_C), value, intent(in) :: maxdims
  integer(INT_C), dimension(*), value, intent(out) :: coords
end function MPI_Cart_coords

end interface MPI_Cart_coords


interface MPI_Cart_create
